manipulation d'une base de donnée sqlite3

--- a/manipulation_base_donnee.ipynb
+++ b/manipulation_base_donnee.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
     "def se_connecter():\n",
     "    return sqlite3.connect(\"gestion_taches.db\")\n",
     "\n",
-    "# Fonction pour créer la table \"taches\" si elle n'existe pas\n",
+    "# Fonction qui crée la table \"taches\" si elle n'existe pas\n",
     "def creer_table():\n",
     "    conn = se_connecter()\n",
     "    cursor = conn.cursor()\n",
@@ -62,7 +62,7 @@
     "    conn.commit()\n",
     "    conn.close()\n",
     "\n",
-    "# Fonction pour insérer une tâche dans la base de données\n",
+    "# Fonction qui insére une tâche dans la base de données\n",
     "def ajouter_tache(titre, description, statut=\"en cours\"):\n",
     "    conn = se_connecter()\n",
     "    cursor = conn.cursor()\n",
@@ -73,7 +73,7 @@
     "    conn.commit()\n",
     "    conn.close()\n",
     "\n",
-    "# Fonction pour récupérer toutes les tâches terminées\n",
+    "# Fonction qui récupére toutes les tâches terminées\n",
     "def recuperer_taches_terminées():\n",
     "    conn = se_connecter()\n",
     "    cursor = conn.cursor()\n",
@@ -82,7 +82,7 @@
     "    conn.close()\n",
     "    return taches\n",
     "\n",
-    "# Fonction pour supprimer une tâche par son ID\n",
+    "# Fonction qui supprime une tâche par son ID\n",
     "def supprimer_tache(id_tache):\n",
     "    conn = se_connecter()\n",
     "    cursor = conn.cursor()\n",
