génération de mot de passes

--- a/test/générate_password.ipynb
+++ b/test/générate_password.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     "def generate_password(length):\n",
     "    if length < 4:\n",
     "        print(\"rrors, le mot de passe doit contenir au moins 4 caractères\")\n",
-    "    # Définir les catégories de caractères\n",
+    "    # Définir toutes les catégories\n",
     "    lower = string.ascii_lowercase\n",
     "    upper = string.ascii_uppercase\n",
     "    digits = string.digits\n",
