manipulation de classes

--- a/test/manipulation_classe.ipynb
+++ b/test/manipulation_classe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
     "        print(\"Mot de passe changé avec succès.\")\n",
     "        return True\n",
     "    \n",
-    "#crée une liste d'objets utilkisateurs pour le test\n",
+    "#crée une liste d'objets utilisateur test\n",
     "utilisateurs = [utilisateur(\"Karima Akrache\", \"alice.dupont@icloud.com\", \"Motdepasse123!\"),\n",
     "                utilisateur(\"Dania Akrache\", \"dania@gmail.com\", \"monmotdepasse7\")]\n",
     "\n",
