calcule de nombre premier

--- a/test/nb_premier.ipynb
+++ b/test/nb_premier.ipynb
@@ -57,7 +57,7 @@
     "result_crible = crible_eratosthene(n)\n",
     "crible_time = time.time() - start_time\n",
     "\n",
-    "# Mesurer le temps pour l'approche brute\n",
+    "# Mesurer le temps pour l'approche brt\n",
     "start_time = time.time()\n",
     "result_brute = brute_force(n)\n",
     "brute_time = time.time() - start_time\n",
