extraire des données à partir d'une url

--- a/test/API_flask.ipynb
+++ b/test/API_flask.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objectif : Créer une API RESTful pour gérer des articles de blog.\n",
+    "#Exercice :\n",
+    "#Utilisez Flask pour créer une API avec les fonctionnalités suivantes :\n",
+    "#Récupérer tous les articles (GET /articles).\n",
+    "#Ajouter un nouvel article (POST /articles).\n",
+    "#Mettre à jour un article (PUT /articles/<id>).\n",
+    "#Supprimer un article (DELETE /articles/<id>).\n",
+    "#Les articles doivent être stockés dans une base de données SQLite."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
