--- a/test/manipulation_base_donnee.ipynb
+++ b/test/manipulation_base_donnee.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objectif : Travailler avec une base de données SQLite.\n",
+    "#Exercice :\n",
+    "#Utilisez la bibliothèque sqlite3 pour :\n",
+    "#Créer une base de données contenant une table tâches avec les colonnes id, titre, #description, statut.\n",
+    "#Insérer des données dans la table.\n",
+    "#Récupérer toutes les tâches terminées.\n",
+    "#Supprimer une tâche spécifique.\n",
+    "#Implémentez un menu en ligne de commande pour interagir avec la base de données."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
