--- a/test/traitement_image.ipynb
+++ b/test/traitement_image.ipynb
@@ -1,18 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Objectif : Manipuler des images pour appliquer des filtres.\n",
+    "#Exercice :\n",
+    "#Utilisez OpenCV pour charger une image.\n",
+    "#Appliquez différents traitements :\n",
+    "#Convertir en niveaux de gris.\n",
+    "#Appliquer un flou gaussien.\n",
+    "#Détecter les contours avec l'algorithme de Canny.\n",
+    "#Sauvegardez les images modifiées dans des fichiers séparés."
+   ]
   },
   {
    "cell_type": "code",
