--- a/test/manipulation_base_donnee.ipynb
+++ b/test/manipulation_base_donnee.ipynb
@@ -170,7 +170,8 @@
     "            print(\"Choix invalide. Veuillez réessayer.\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    menu()\n"
+    "    menu()\n",
+    "\n"
    ]
   }
  ],
