manipulation d'une base de donnée vente

--- a/test/manipulation_data_vente.ipynb
+++ b/test/manipulation_data_vente.ipynb
@@ -1770,7 +1770,8 @@
     "    total_CA = (\"total\", \"sum\")\n",
     ").reset_index()\n",
     "with open('resume_ventes_par_produit.csv', mode='w', newline='', encoding='utf-8') as file:\n",
-    "    resume_vente.to_csv(file, index=False)"
+    "    resume_vente.to_csv(file, index=False)\n",
+    "    "
    ]
   }
  ],
